Removed overflow: hidden and added margin: 0 to prevent unnecessary scrolling behavior on landing Page and settings page.

--- a/src/styles/landingPage.scss
+++ b/src/styles/landingPage.scss
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   flex-direction: column;
   color: #ffffff;
-  overflow: hidden;
+  margin: 0;
 }
 
 .headline {
