--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,7 +1,7 @@
 body {
   display: flex;
   justify-content: center;
-  overflow: hidden;
+  margin: 0;
 }
 
 .settings-container {
